--- a/templates/after_log/page.html.twig
+++ b/templates/after_log/page.html.twig
@@ -6,7 +6,6 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>ACCUEIL</h2></a>
-
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -16,34 +15,8 @@
                 <li class="nav-item active">
                     {#<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
                 </li>
-                {#  <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                  </li>#}
-
-
             </ul>
-           {# <ul class="navbar-nav">
-                <li class="nav-item">
-                    <div class="dropdown">
-                         <a href="#" class="dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                               <img src="{{ asset('assets/svg/envelope.svg') }}">
-                               <span class="badge rounded-pill badge-notification bg-danger">{{ app.user.received|length }}</span>
-                        </a>
-
-                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                              <a class="dropdown-header" href="#" style="background-color:blue;">Titre</a>
-
-                                {% for courrier in app.user.received %}
-                                    <a class="dropdown-item" href="#">{{ courrier.nomC }}</a>
-                                {% endfor %}
-                            </a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Voir plus</a>
-                          </div>#}
-                    </div>
-                </li>
-            </ul>
+        </li>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
                 <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -58,29 +31,24 @@
                         {% endif %}
                     {% endfor %}
                     {% if i == 0 %}
-                    <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
-                        {% else %}
-                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
-                        {% endif %}
+                        <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
+                    {% else %}
+                        <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                    {% endif %}
                     {# fin #}
+                </a>
 
-                    </a>
                 <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
                     <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
                              {% if app.user.received|length == 0 %}
                                 <p class="text-center"> Aucun courrier reçus </p>
-
-                                {% else %}
-
-                    {% for liste in listeCourrier %}
-                                        {% if liste.recipient.id == user.id %}
-                                                {% set bold = "" %}
-                                                {% if liste.isRead == 0  %}
-                                                    {% set bold ="font-weight-bold" %}
-
-                                                {% endif %}
-
-
+                             {% else %}
+                                {% for liste in listeCourrier %}
+                                    {% if liste.recipient.id == user.id %}
+                                        {% set bold = "" %}
+                                        {% if liste.isRead == 0  %}
+                                            {% set bold ="font-weight-bold" %}
+                                        {% endif %}
                                             <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:5.3rem;">
                                                 <div class ="jo">
                                                     <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
@@ -92,81 +60,64 @@
                                                     <div style="color:#b7b9cc;" class="text-truncate">
                                                         {{ liste.sender.nom}} , {{ liste.status}}
                                                     </div>
-
                                                 </div>
                                             </a>
-                                        {% endif %}
-                                    {% endfor %}
-
+                                    {% endif %}
+                                {% endfor %}
                              {% endif %}
 
 
-
-
-                    {# <div class="dropdown-divider"></div> #}
                     <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
                 </div>
 
                 </a>
             </li>
         </ul>
-       {# <div class="topbar-divider d-none d-sm-block"> #}
 
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    {% if is_granted('ROLE_ADMIN') %}
+        {# acces de la liste uniquement au utilisateur ayant le role admin #}
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                {% if is_granted('ROLE_ADMIN') %}
                         <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
+                {% endif %}
+            </li>
+        </ul>
+        {#fin#}
 
-
-                    {% endif %}
-
-                </li>
-            </ul>
-
-            <ul class="navbar-nav">
-
-                <div class="dropdown">
-                     <li class="nav-item">
-                        {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
-                        <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                              <span class="dropdown-item"></span>
-                                    <div class="d-flex">
-                                             <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
-                                             <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
-                                    </div>
-                                    <div  class="d-flex text-center" style="margin-top:5px;">
-                                        <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;"> 
-                                        <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
-                                    </div>
-                                
-                                <div class="dropdown-divider"></div>
-                                <div class="d-flex">
-                                     <img src ="{{asset('assets/svg/logout.svg')}}"> 
-                                     <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
-                                </div>
+        <ul class="navbar-nav">
+            <div class="dropdown">
+                <li class="nav-item">
+                    <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                        <span class="dropdown-item"></span>
+                        <div class="d-flex">
+                            <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
+                            <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
                         </div>
-                    </li>
-                </div>
-            </ul>
-        </div>
-        </li>
+                        <div  class="d-flex text-center" style="margin-top:5px;">
+                            <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;">
+                            <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
+                        </div>
+                        <div class="dropdown-divider"></div>
+                        <div class="d-flex">
+                            <img src ="{{asset('assets/svg/logout.svg')}}">
+                            <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
+                        </div>
+                    </div>
+                </li>
+            </div>
+        </ul>
+
     </nav>
 </header>
 {% endblock %}
-
-    {% block body %}
-
+{% block body %}
         <section class="container">
-
             <div class="row m-5">
-
                 <div class="col-12">
                     <div class="card">
                         <div class="card-header"><h1>Courrier</h1></div>
                         <div class="card-body d-flex w-100">
-
-
                                 <div class="col-4">
                                     <div class="card border-left-primary shadow py-2">
                                         <div class="card-body">
@@ -195,11 +146,10 @@
                                         </div>
                                     </div>
                                 </div>
-
                             <div class="col-4">
                                 <div class="flex-column">
                                     <a href="{{ path("received") }}" class=" btn btn-info btn-block"> Boites de réceptions</a>
-                                <a href="{{ path("send") }}" class="btn btn-info btn-block"> Courrier envoyés</a>
+                                    <a href="{{ path("send") }}" class="btn btn-info btn-block"> Courrier envoyés</a>
 
                                     <div class="justify-content-end btn-block">
                                         <a href="" class="btn btn-primary btn-rounded btn-block" data-toggle="modal" data-target="#orangeModalSubscription">Créer un courrier</a>
@@ -217,17 +167,13 @@
                                                         <span aria-hidden="true" class="white-text">&times;</span>
                                                     </button>
                                                 </div>
-
                                                 <!--Body-->
                                                 <div class="modal-body">
-
                                                     {{ form_start(form) }}
-
                                                     <div class="form-group">
                                                         <div class="form-group">
                                                             {{ form_label(form.nom_c)}}
                                                             {{ form_widget(form.nom_c)}}
-
                                                         </div>
                                                         <div class="form-group">
                                                             {{ form_label(form.notes)}}
@@ -245,14 +191,9 @@
                                                             {{ form_label(form.recipient)}}
                                                             {{ form_widget(form.recipient)}}
                                                         </div>
-
                                                     </div>
-                                                    <br />
-
-
-
+                                                    <br/>
                                                 </div>
-
                                                 <!--Footer-->
                                                 <div class="modal-footer justify-content-center">
                                                     <a type="button"> {{form_widget(form.envoyer)}} <i class="fas fa-paper-plane-o ml-1"></i></a>
@@ -262,13 +203,7 @@
                                             <!--/.Content-->
                                         </div>
                                     </div>
-
                             </div>
-
-
-
-
-
                         </div>
                         </div>
                     </div>
