--- a/templates/courrier/send.html.twig
+++ b/templates/courrier/send.html.twig
@@ -14,138 +14,110 @@
                     <li class="nav-item active">
                         {#<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
                     </li>
-                    {#  <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
-                      </li>#}
-                    {#  <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Courrier
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{{ path("received") }}">Boites de receptions</a>
-                            <a class="dropdown-item" href="{{ path("send") }}">Courrier envoyés</a>
-                            {#<div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>#}
-                    </li>
-
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
-                            {# Debut de la gestion de la notification#}
-                            {% set i = 0 %}
+            </li>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
+                        {# Debut de la gestion de la notification#}
+                        {% set i = 0 %}
+                        {% for liste in listeCourrier %}
+                            {% if liste.recipient.id == user.id %}
+                                {% if liste.isRead == 0  %}
+                                    {% set i = i + 1 %}
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                        {% if i == 0 %}
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
+                        {% else %}
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                        {% endif %}
+                        {# fin #}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+                        <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                        {% if app.user.received|length == 0 %}
+                            <p class="text-center"> Aucun courrier reçus </p>
+                        {% else %}
                             {% for liste in listeCourrier %}
                                 {% if liste.recipient.id == user.id %}
+                                    {% set bold = "" %}
                                     {% if liste.isRead == 0  %}
-                                        {% set i = i + 1 %}
+                                        {% set bold ="font-weight-bold" %}
                                     {% endif %}
+                                    <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:5.3rem;">
+                                        <div class ="jo">
+                                            <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                        </div>
+                                        <div style="display:block;">
+                                            <div class="text " style="color:black;">
+                                                {{ liste.nomC }}
+                                            </div>
+                                            <div style="color:#b7b9cc;" class="text-truncate">
+                                                {{ liste.sender.nom}} , {{ liste.status}}
+                                            </div>
+                                        </div>
+                                    </a>
                                 {% endif %}
                             {% endfor %}
-                            {% if i == 0 %}
-                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
-                            {% else %}
-                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
-                            {% endif %}
-                            {# fin #}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
-                            <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
-                             {% if app.user.received|length == 0 %}
-                                <p class="text-center"> Aucun courrier reçus </p>
-
-                                {% else %}
-                                   {% for liste in listeCourrier %}
-                                        {% if liste.recipient.id == user.id %}
-                                                {% set bold = "" %}
-                                                {% if liste.isRead == 0 %}
-                                                    {% set bold ="font-weight-bold" %}
-                                                {% endif %}
-                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:5.3rem;">
-                                                <div class ="jo">
-                                                    <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
-                                                </div>
-                                                <div style="display:block;">
-                                                    <div class="text " style="color:black;">
-                                                        {{ liste.nomC }}
-                                                    </div>
-                                                    <div style="color:#b7b9cc;" class="text-truncate">
-                                                        {{ liste.sender.nom}} , {{ liste.status}}
-                                                    </div>
-
-                                                </div>
-                                            </a>
-                                        {% endif %}
-                                    {% endfor %}
-                             {% endif %}
-
-
-
-                            {# <div class="dropdown-divider"></div> #}
-                            <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
-                        </div>
-
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
-
-
                         {% endif %}
 
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
 
-                    <div class="dropdown">
-                        <li class="nav-item">
-                           {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
-                            <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="dropdown-menu dropdown-menu-right text-center" aria-labelledby="dropdownMenuButton">
-                                 <span class="dropdown-item"></span>
-                                    <div class="d-flex">
-                                             <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
-                                             <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
-                                    </div>
-                                    <div  class="d-flex text-center" style="margin-top:5px;">
-                                        <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;"> 
-                                        <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
-                                    </div>
-                                
-                                <div class="dropdown-divider"></div>
-                                <div class="d-flex">
-                                     <img src ="{{asset('assets/svg/logout.svg')}}"> 
-                                     <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
-                                </div>
-                            </div>
-                        </li>
+                        <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
                     </div>
-                </ul>
+
+                    </a>
+                </li>
+            </ul>
+
+            {# acces de la liste uniquement au utilisateur ayant le role admin #}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
+                    {% endif %}
+                </li>
+            </ul>
+            {#fin#}
+
+            <ul class="navbar-nav">
+                <div class="dropdown">
+                    <li class="nav-item">
+                        <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <span class="dropdown-item"></span>
+                            <div class="d-flex">
+                                <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
+                                <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
+                            </div>
+                            <div  class="d-flex text-center" style="margin-top:5px;">
+                                <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;">
+                                <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
+                            </div>
+                            <div class="dropdown-divider"></div>
+                            <div class="d-flex">
+                                <img src ="{{asset('assets/svg/logout.svg')}}">
+                                <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
+                            </div>
+                        </div>
+                    </li>
                 </div>
-            </li>
+            </ul>
+
         </nav>
     </header>
 {% endblock %}
 {% block body %}
-   {# <section class="container">
-        <div class="row">
-            <div class="col">
-                <h1>Envoyer un Courrier</h1>
-
-                {{ form(form) }}
-
-            </div>
-        </div>
-
-    </section>#}
-
     <section class="container-fluid" style="margin-top: 70px">
         <div class="card card-trap text-center">
-            <div class="card-header">   <div class="container"><h2>Courrier envoyés</h2></div></div>
+            <div class="card-header">
+                <div class="container">
+                    <h2>Courrier envoyés</h2>
+                </div>
+            </div>
             <div class="card-body">
                 <table class="table table-striped table-bordered table_data">
                     <thead>
@@ -156,48 +128,40 @@
                         <th>Status</th>
                         <th>Courrier</th>
                         <th>Date</th>
-
                     </tr>
                     </thead>
                     <tbody>
-                    {% for courrier in app.user.sent %}
+                    {% for courrier in app.user.sent%}
                     <tr>
-
                         <td>{{ courrier.recipient.Nom }}</td>
                         <td>{{ courrier.recipient.email }}</td>
                         <td>{{ courrier.nomC }}</td>
-                        <td>    {% if courrier.status == "TRES URGENT" %}
-                                <span style="padding: 7px; border-radius: 50px; "> {{ courrier.status }} </span>
+                        <td>
+                            {% if courrier.status == "TRES URGENT" %}
+                                <span style="padding: 7px; border-radius: 50px; "> {{ courrier.status }}</span>
                             {% elseif courrier.status == "URGENT" %}
-                                <span style="padding: 7px; border-radius: 50px;"> {{ courrier.status }} </span>
-
+                                <span style="padding: 7px; border-radius: 50px;"> {{ courrier.status }}</span>
                             {% else %}
                                 <span style="padding: 7px; border-radius: 50px;"> {{ courrier.status }} </span>
                             {% endif %}
                         <td>{{ courrier.fichier }}</td>
-                        <td>{{ courrier.createdAt|date}}</td>
-
+                        <td>{{ courrier.createdAt|date  }}</td>
                     </tr>
-                    {% else %}
+                            {% else %}
                     <tr>
                         <td colspan="10">Aucun courrier envoyés</td>
                     </tr>
-
                     {% endfor %}
                     </tbody>
                 </table>
-
             </div>
         </div>
-
-
     </section>
 
     <a href="" class="scroll-to-top rounded" data-toggle="modal" data-target="#souscription2" style="display: inline;">
         <img src="{{asset('assets/svg/notetask.png')}}" style="height:60px;" class="joker">
     </a>
     {# ------------------------------------------------------------------------ #}
-
     <div class="modal fade" id="souscription2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
          aria-hidden="true">
         <div class="modal-dialog modal-notify modal-warning" role="document">
@@ -210,17 +174,13 @@
                         <span aria-hidden="true" class="white-text">&times;</span>
                     </button>
                 </div>
-
                 <!--Body-->
                 <div class="modal-body">
-
                     {{ form_start(form) }}
-
                     <div class="form-group">
                         <div class="form-group">
                             {{ form_label(form.nom_c)}}
                             {{ form_widget(form.nom_c)}}
-
                         </div>
                         <div class="form-group">
                             {{ form_label(form.notes)}}
@@ -238,14 +198,9 @@
                             {{ form_label(form.recipient)}}
                             {{ form_widget(form.recipient)}}
                         </div>
-
                     </div>
                     <br />
-
-
-
                 </div>
-
                 <!--Footer-->
                 <div class="modal-footer justify-content-center">
                     <a type="button"> {{form_widget(form.envoyer)}} <i class="fas fa-paper-plane-o ml-1"></i></a>
@@ -255,8 +210,5 @@
             <!--/.Content-->
         </div>
     </div>
-
     {#------------------------------------------------------------------------- #}
-
-
 {% endblock %}
