--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Listes d'utilisateur{% endblock %}
-
 {% block navbar %}
+
     <header>
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ path('page_index', {id: user.id}) }}"><h2>ACCUEIL</h2></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -15,123 +15,102 @@
                     <li class="nav-item active">
                         {#<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>#}
                     </li>
-                    {#  <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
-                      </li>#}
-                    {#  <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Courrier
-                        </a>
-                      {#  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="{{ path("received") }}">Boites de receptions</a>
-                            <a class="dropdown-item" href="{{ path("send") }}">Courrier envoyés</a>
-                            {#<div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>#}
-                    </li>
-
                 </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
-                            {# Debut de la gestion de la notification#}
-                            {% set i = 0 %}
+            </li>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a  class="nav-link" href="#" id="receivedDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="{{ asset('assets/svg/envelope.svg') }}" style="height:30px;">
+                        {# Debut de la gestion de la notification#}
+                        {% set i = 0 %}
+                        {% for liste in listeCourrier %}
+                            {% if liste.recipient.id == user.id %}
+                                {% if liste.isRead == 0  %}
+                                    {% set i = i + 1 %}
+                                {% endif %}
+                            {% endif %}
+                        {% endfor %}
+                        {% if i == 0 %}
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
+                        {% else %}
+                            <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
+                        {% endif %}
+                        {# fin #}
+                    </a>
+
+                    <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
+                        <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
+                        {% if app.user.received|length == 0 %}
+                            <p class="text-center"> Aucun courrier reçus </p>
+                        {% else %}
                             {% for liste in listeCourrier %}
                                 {% if liste.recipient.id == user.id %}
+                                    {% set bold = "" %}
                                     {% if liste.isRead == 0  %}
-                                        {% set i = i + 1 %}
+                                        {% set bold ="font-weight-bold" %}
                                     {% endif %}
+                                    <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:5.3rem;">
+                                        <div class ="jo">
+                                            <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
+                                        </div>
+                                        <div style="display:block;">
+                                            <div class="text " style="color:black;">
+                                                {{ liste.nomC }}
+                                            </div>
+                                            <div style="color:#b7b9cc;" class="text-truncate">
+                                                {{ liste.sender.nom}} , {{ liste.status}}
+                                            </div>
+                                        </div>
+                                    </a>
                                 {% endif %}
                             {% endfor %}
-                            {% if i == 0 %}
-                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter d-none ">  {{ i }}</span>
-                            {% else %}
-                                <span class="badge rounded-pill badge-notification bg-danger badge badge-danger badge-counter ">  {{ i }}</span>
-                            {% endif %}
-                            {# fin #}
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right drop" aria-labelledby="receivedDropdown">
-                             <h6 class="dropdown-header text-center" >CENTRE COURRIER</h6>
-                             {% if app.user.received|length == 0 %}
-                                <p class="text-center"> Aucun courrier reçus </p>
-
-                                {% else %}
-                                    {% for liste in listeCourrier %}
-                                        {% if liste.recipient.id == user.id %}
-                                                {% set bold = "" %}
-                                                {% if liste.isRead == 0 %}
-                                                    {% set bold ="font-weight-bold" %}
-                                                {% endif %}
-                                            <a href="{{ path("excel", {id: liste.id}) }}" class="d-flex hope {{bold}}" style="height:5.3rem;">
-                                                <div class ="jo">
-                                                    <img class="rounded-circle" src="{{ asset('assets/svg/abstract-user.svg') }}">
-                                                </div>
-                                                <div style="display:block;">
-                                                    <div class="text " style="color:black;">
-                                                        {{ liste.nomC }}
-                                                    </div>
-                                                    <div style="color:#b7b9cc;" class="text-truncate">
-                                                        {{ liste.sender.nom}} , {{ liste.status}}
-                                                    </div>
-
-                                                </div>
-                                            </a>
-                                        {% endif %}
-                                    {% endfor %}
-                             {% endif %}
-
-
-
-                            {# <div class="dropdown-divider"></div> #}
-                            <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
-                        </div>
-
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
-
-
                         {% endif %}
 
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
 
-                    <div class="dropdown">
-                        <li class="nav-item">
-                            {# <span class="mr-2 d-none d-flex text-gray-600 small"> {{ user.Nom }}</span> #}
-                            <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                 <span class="dropdown-item"></span>
-                                    <div class="d-flex">
-                                             <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
-                                             <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
-                                    </div>
-                                    <div  class="d-flex text-center" style="margin-top:5px;">
-                                        <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;"> 
-                                        <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
-                                    </div>
-                                
-                                <div class="dropdown-divider"></div>
-                                <div class="d-flex">
-                                     <img src ="{{asset('assets/svg/logout.svg')}}"> 
-                                     <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
-                                </div>
-                            </div>
-                        </li>
+                        <a class="dropdown-item text-center" href="{{ path('received') }}">Voir tous les courriers</a>
                     </div>
-                </ul>
+
+                    </a>
+                </li>
+            </ul>
+
+            {# acces de la liste uniquement au utilisateur ayant le role admin #}
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <a class="nav-link" href="{{ path('user_index') }}">Liste d'utilisateur</a>
+                    {% endif %}
+                </li>
+            </ul>
+            {#fin#}
+
+            <ul class="navbar-nav">
+                <div class="dropdown">
+                    <li class="nav-item">
+                        <img src ="{{asset('assets/svg/4.png')}}" class="img-profile rounded-circle dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                            <span class="dropdown-item"></span>
+                            <div class="d-flex">
+                                <img src ="{{asset('assets/svg/ip-address.svg')}}" style="height:25px;width:25px;">
+                                <h5 style="margin-left:4px;">  {{ user.IP }}</h5>
+                            </div>
+                            <div  class="d-flex text-center" style="margin-top:5px;">
+                                <img src ="{{asset('assets/svg/profile_icon.png')}}" style="height:25px;width:25px;">
+                                <h5 style="margin-left:4px;">  {{ user.Nom }}</h5>
+                            </div>
+                            <div class="dropdown-divider"></div>
+                            <div class="d-flex">
+                                <img src ="{{asset('assets/svg/logout.svg')}}">
+                                <a class="dropdown-item" style="padding-left:2px;" href="{{ path('app_logout') }}">Déconnexion</a>
+                            </div>
+                        </div>
+                    </li>
                 </div>
-            </li>
+            </ul>
+
         </nav>
     </header>
 {% endblock %}
-
 {% block body %}
     <div class="container">
         <h1 class="text-center">Listes</h1>
@@ -144,7 +123,6 @@
                 <th>Email</th>
                 <th>Status</th>
                 <th>Acif/inactif</th>
-
                 <th>Actions</th>
             </tr>
             </thead>
@@ -161,11 +139,9 @@
                             {% else %}
                                 <span style="background-color: #8b9096; padding: 7px; border-radius: 50px;color:#fff;"> {{ user.valeur_status }} </span>
                         {% endif %}
-
                        </td>
-
                     <td>
-                        <a href="{{ path('user_show', {'id': user.id}) }}" class="btn btn-info">Voir</a>
+                        <a href="{{ path('user_show', {'id': user.id}) }}" class="btn btn-info" >Voir</a>
                         <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-dark">Modifier</a>
                     </td>
                 </tr>
@@ -174,11 +150,7 @@
                     <td colspan="5">Aucun résultat</td>
                 </tr>
             {% endfor %}
-
             </tbody>
         </table>
-
     </div>
-
-
 {% endblock %}
